# c_splinefit

./: CMakeLists.txt  accel.c  cspline.c  interp.c  main.c  spline.c  tridiag.c
